Completed html-relative-links

--- a/html-intro/index.html
+++ b/html-intro/index.html
@@ -1,13 +1,28 @@
+<!-- doctype declaration html -->
 <!DOCTYPE html>
+<!-- opening tag for an html element -->
 <html lang="en">
+  <!-- opening tag for a head element-->
   <head>
+    <!-- opening tag for a title element. Followed by text content. Followed by closing tag for title-->
     <title>HTML Intro</title>
+    <!-- closing tag for head element -->
   </head>
+  <!-- opening tag for a body element-->
   <body>
+    <!-- A self closing tag for the image element.
+    Then an alt attribute with a value of Pikachu.
+    Then a src attribute with a value of an absolute URL. -->
     <img
       src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/025.png"
       alt="Pikachu" />
+    <!-- opening tag for h1 element. Followed by text content. Followed by the closing tag. -->
     <h1>Pikachu</h1>
+    <!-- openning tag for p element. Followed by an html entity for copyright symbols.
+          Followed by text context. Followed by html entity for registered trademark.
+          Followed by text content. Followed by closing p tag-->
     <p>&copy; 2024 Pokémon. &reg; Nintendo.</p>
+    <!-- Closing body tag -->
   </body>
+  <!-- closing html tag-->
 </html>
