Completed html-web-page

--- a/html-web-page/index.html
+++ b/html-web-page/index.html
@@ -34,7 +34,7 @@
         <td></td>
         <td>Basic Plan</td>
         <td>Deluxe Plan</td>
-        <td>Jelly Glant Plant</td>
+        <td>Jelly Giant Plant</td>
       </thead>
       <tbody>
         <!-- Three new curated jellies per month -->
