--- a/css-layout-classes/index.html
+++ b/css-layout-classes/index.html
@@ -13,12 +13,12 @@
       </div>
       <!-- Row 1 Content-->
       <div class="row">
-        <div class="column">
+        <div class="column-1-3">
           <div class="content">
             <img src="images/link.png" alt="Link" />
           </div>
         </div>
-        <div class="column">
+        <div class="column-1-3">
           <div class="content">
             <article>
               <h2>Super Smash Bros. Ultimate</h2>
@@ -32,7 +32,7 @@
             </article>
           </div>
         </div>
-        <div class="column">
+        <div class="column-1-3">
           <div class="content">
             <img src="images/yoshi.png" alt="Yoshi" />
           </div>
@@ -41,22 +41,22 @@
       <!-- Row 1 End -->
       <!-- Row 2 Content -->
       <div class="row">
-        <div class="column">
+        <div class="column-1-4">
           <div class="content">
             <img src="images/kirby.png" alt="Kirby" />
           </div>
         </div>
-        <div class="column">
+        <div class="column-1-4">
           <div class="content">
             <img src="images/fox.png" alt="Fox" />
           </div>
         </div>
-        <div class="column">
+        <div class="column-1-4">
           <div class="content">
             <img src="images/pikachu.png" alt="Pikachu" />
           </div>
         </div>
-        <div class="column">
+        <div class="column-1-4">
           <div class="content">
             <img src="images/ness.png" alt="Ness" />
           </div>
@@ -65,7 +65,7 @@
       <!-- Row 2 End -->
       <!-- Row 3 Content -->
       <div class="row">
-        <div class="column">
+        <div class="column-2-3">
           <div class="content">
             <article>
               <h2>Donkey Kong</h2>
@@ -83,7 +83,7 @@
             </article>
           </div>
         </div>
-        <div class="column">
+        <div class="column-1-3">
           <div class="content">
             <img src="images/dk.png" alt="Donkey Kong" />
           </div>
@@ -92,12 +92,12 @@
       <!-- Row 3 End -->
       <!-- Row 4 Content -->
       <div class="row">
-        <div class="column">
+        <div class="column-1-3">
           <div class="content">
             <img src="images/mario.png" alt="Mario" />
           </div>
         </div>
-        <div class="column">
+        <div class="column-2-3">
           <div class="content">
             <article>
               <h2>Mario</h2>
