--- a/typescript-light-bulb/index.html
+++ b/typescript-light-bulb/index.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet" href="style.css" />
     <title>Typescript Light Bulb</title>
   </head>
-  <body class="light">
-    <div class="bulb on" id="light-bulb"></div>
+  <body>
+    <div class="container">
+      <div class="light">
+        <div class="bulb on" id="light-bulb"></div>
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
